<resources>
	<string name="app_name">Kotlin Free</string>
	<string name="banner_ad_unit_id">ca-app-pub-1411495427741055/6369974912</string>
	<string name="lessons">Lessons</string>
	<string name="lessons1">Part 1</string>
	<string name="lessons2">Part 2</string>
	<string name="lessons3">Part 3</string>
	<string name="lessons4">Part 4</string>
	<string name="powered_by_aide">Powered by Aide</string>
	<string name="changelog">Changelog</string>
	<string name="preferences_title">Settings</string>
	<string name="preferences_title_language">Language</string>
	<string name="preferences_summary_language">Change language here.</string>
	<string name="preferences_title_about">About</string>
	<string name="preferences_summary_about">About Kotlin</string>
	<string name="lesson1_title">Welcome to Kotlin!</string>
	<string name="lesson2_title">Basic Syntax</string>
	<string name="lesson3_title">Variables</string>
	<string name="lesson4_title">Basic Types</string>
	<string name="lesson5_title">Characters and Strings</string>
	<string name="lesson6_title">Literal Constants</string>
	<string name="lesson7_title">Output</string>
	<string name="lesson8_title">Input</string>
	<string name="lesson8_p">An easy way to read from the standard input is the <b>readLine()</b> function:</string>
	<string name="lesson9_title">Comments</string>
	<string name="lesson10_title">Arithmetics Operations</string>
	<string name="lesson10_code"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font> num1:<font color="#FF0096FF">Int</font>" = 8;
		"<font color="#FF2C82C8">var</font> num2:<font color="#FF0096FF">Int</font>" = 3;

		"<font color="#FF009B00">// Calculating the sum</font>"
		"<font color="#FF2C82C8">val</font>" sum = num1 + num2;
		println("<font color="#FFBC0000">\"Sum is $sum\"</font>");
		}"</string>
	<string name="lesson10_p2">The <b>division (/)</b>" operator results in an integer, removing any remainder.
		For example, dividing 8 by 3 results in 2:"</string>
	<string name="lesson10_code2"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font> num1:<font color="#FF0096FF">Int</font>" = 10;
		"<font color="#FF2C82C8">var</font> num2:<font color="#FF0096FF">Int</font>" = 3;

		"<font color="#FF2C82C8">var</font>" div = num1 / num2;
		println(div);
		}"</string>
	<string name="lesson10_p3">"To get the remainder of the division use the  % "<b>(modulo)</b>" operator.
		For example:"</string>
	<string name="lesson10_code3"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font> num1:<font color="#FF0096FF">Int</font>" = 10;
		"<font color="#FF2C82C8">var</font> num2:<font color="#FF0096FF">Int</font>" = 3;

		"<font color="#FF2C82C8">var</font>" remainder = num1 % num2;
		println(remainder);
		}"</string>
	<string name="lesson10_hint">Division by zero produces an exception.</string>
	<string name="lesson11_title">Increment and Decrement</string>
	<string name="lesson12_title">String Templates</string>
	<string name="lesson13_title">Practice Time: Basics</string>
	<string name="lesson14_title">Control Flow: if and else</string>
	<string name="lesson15_title">The if-else-if Chain</string>
	<string name="lesson16_title">Logical Operators</string>
	<string name="lesson17_title">when Expression</string>
	<string name="lesson17_p">In Kotlin, the <b>when</b>" statement is used to check for multiple conditions.
		The basic syntax of the "<b>when</b> statement is as follows:</string>
	<string name="lesson17_code"><font color="#FF2C82C8">when</font>" (variable) {
		condition -> statement
		}"</string>
	<string name="lesson17_hint"><b>when</b> is the equivalent to the <b>switch</b> statement in other languages.</string>
	<string name="lesson17_p2"><b>when</b> matches its argument against all branches sequentially until some branch condition is satisfied.</string>
	<string name="lesson17_code2"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">val</font>" num = 15;
		"<font color="#FF2C82C8">when</font>" (num) {
		10 -> println("<font color="#FFBC0000">\"Case 1\"</font>");
		15 -> println("<font color="#FFBC0000">\"Case 2\"</font>");
		20 -> println("<font color="#FFBC0000">\"Case 3\"</font>");
		"<font color="#FF2C82C8">else</font> -> println(<font color="#FFBC0000">\"Default case\"</font>");
		}
		}"</string>
	<string name="lesson17_p3"><b>when</b> can also be used as a replacement for an <b>if-else if</b> chain. If no argument is supplied, the branch conditions are simply boolean expressions:</string>
	<string name="lesson17_code3"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font> age: <font color="#FF0096FF">Int</font>" = readLine()!!.toInt();
		"<font color="#FF2C82C8">when</font>" {
		age &lt; 22 -> println("<font color="#FFBC0000">\"Too young\"</font>");
		age > 50 -> println("<font color="#FFBC0000">\"Too old\"</font>");
		"<font color="#FF2C82C8">else</font> -> println(<font color="#FFBC0000">\"Welcome\"</font>");
		}
		}"</string>
	<string name="lesson17_p4">The last <b>else</b> case is evaluated if all of the previous cases before it evaluated to <b>false.</b>"

		Multiple conditions can be tested in one case as long as they are all separated by commas."</string>
	<string name="lesson17_code4"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font>" x = 5;

		"<font color="#FF2C82C8">when</font>"(x) {
		1, 3, 5, 7, 9 -> println("<font color="#FFBC0000">\"Odd\"</font>");
		2, 4, 6, 8 -> println("<font color="#FFBC0000">\"Even\"</font>");
		"<font color="#FF2C82C8">else</font> -> println(<font color="#FFBC0000">\"Unknown\"</font>");
		}
		"<font color="#FF009B00">//Outputs Odd</font>"
		}"</string>
	<string name="lesson17_p5"><b>when</b> can also be used as an expression. If it is used as an expression, the value of the satisfied branch becomes the value of the overall expression.</string>
	<string name="lesson17_code5"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>">) {
		"<font color="#FF2C82C8">var</font>" grade = 88;
		"<font color="#FF2C82C8">var</font> result = <font color="#FF2C82C8">when</font>" {
		grade &lt; 50 -> "<font color="#FFBC0000">\"Failed\"</font>";
		grade > 50 &amp;&amp; grade &lt; 80 -> "<font color="#FFBC0000">\"Good\"</font>";
		grade > 80 -> "<font color="#FFBC0000">\"Awesome!\"</font>";
		"<font color="#FF2C82C8">else</font> -> <font color="#FFBC0000">\"Unknown\"</font>";
		}
		println(result);
		}"</string>
	<string name="lesson17_hint2">If <b>when</b> is used as an expression, the <b>else</b> branch is mandatory.</string>
	<string name="lesson18_title">The while Loop</string>
	<string name="lesson19_title">The do-while Loop</string>
	<string name="lesson20_title">break and continue</string>
	<string name="lesson21_title">Arrays</string>
	<string name="lesson22_title">Ranges</string>
	<string name="lesson23_title">The for Loop</string>
	<string name="lesson24_title">Using Loops with Arrays</string>
	<string name="lesson25_title">Practice Time: Loops and Arrays</string>
	<string name="lesson30_p">In programming languages, null is the absence of value.\n
		If you declare a variable in Kotlin you get a non-nullable value, meaning that the variable cannot be null:</string>
	<string name="lesson30_code"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>&gt;) {\n
		<font color="#FF2C82C8">var</font> str: <font color="#FF0096FF">String</font> = <font color="#FFBC0000">\"Kotlin\"</font>;\n
		str = null;\n
		}</string>
	<string name="lesson30_p2">This code generates a compile error, because Kotlin’s <b>type system</b> tries to eliminate <b>NullPointerException</b>. This guarantees accessing properties and methods of <b>str</b>:</string>
	<string name="lesson30_code2"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>&gt;) {\n
		<font color="#FF2C82C8">var</font> a: <font color="#FF0096FF">String</font> = <font color="#FFBC0000">\"Kotlin\"</font>;\n
		println(a.length);<font color="#FF009B00">// safely accessing a property</font>\n
		}</string>
	<string name="lesson30_p3">To allow nulls, we can declare a variable as nullable using the question mark as shown below:</string>
	<string name="lesson30_code3"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>&gt;) {\n
		<font color="#FF2C82C8">var</font> str: <font color="#FF0096FF">String</font>? = <font color="#FFBC0000">\"Kotlin\"</font>;\n
		str = null;\n
		println(str);\n
		}</string>
	<string name="lesson30_p4">The code above will work without any errors.\n\n
		However, now, trying to access a property on nullable <b>str</b>, causes a compile-time error, as now <b>str</b> can be null:</string>
	<string name="lesson30_code4"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>&gt;) {\n
		<font color="#FF2C82C8">var</font> str: <font color="#FF0096FF">String</font>? = <font color="#FFBC0000">\"Kotlin\"</font>;\n
		println(str.length);\n
		}</string>
	<string name="lesson30_p5">To safely <b>access</b> nullable values, we have to use the <b>?.</b> operator (called the <b>safe call operator</b>).</string>
	<string name="lesson30_code5"><font color="#FF2C82C8">fun</font> main(args: <font color="#FF0096FF">Array</font>&lt;<font color="#FF0096FF">String</font>&gt;) {\n
		<font color="#FF2C82C8">var</font> str: <font color="#FF0096FF">String</font>? = <font color="#FFBC0000">\"Kotlin\"</font>;\n
		println(str?.length);\n
		}</string>
	<string name="lesson30_hint">The <b>?</b> can be used with any type to make it nullable.</string>
</resources>