<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<include
			layout="@layout/main_toolbar"/>

	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:gravity="center">

		<ScrollView
			android:layout_gravity="top"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_p"
					android:padding="10dp"/>

				<HorizontalScrollView
					android:background="@color/kotlin_code"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:text="@string/lesson30_code"
						android:padding="10dp"/>

				</HorizontalScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_p2"
					android:padding="10dp"/>

				<HorizontalScrollView
					android:background="@color/kotlin_code"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:text="@string/lesson30_code2"
						android:padding="10dp"/>

				</HorizontalScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_p3"
					android:padding="10dp"/>

				<HorizontalScrollView
					android:background="@color/kotlin_code"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:text="@string/lesson30_code3"
						android:padding="10dp"/>

				</HorizontalScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_p4"
					android:padding="10dp"/>

				<HorizontalScrollView
					android:background="@color/kotlin_code"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:text="@string/lesson30_code4"
						android:padding="10dp"/>

				</HorizontalScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_p5"
					android:padding="10dp"/>

				<HorizontalScrollView
					android:background="@color/kotlin_code"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:text="@string/lesson30_code5"
						android:padding="10dp"/>

				</HorizontalScrollView>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/lesson30_hint"
					android:padding="10dp"
					android:background="#fffcff00"/>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
