<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Lessons2">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<include
			layout="@layout/main_toolbar"/>

	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:gravity="center">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:gravity="center">

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<LinearLayout
					android:gravity="center"
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson14"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson14_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson15"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson15_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson16"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson16_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson17"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson17_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson18"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson18_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson19"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson19_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson20"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson20_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson21"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson21_title"
						android:onClick="aboutOnClick"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson22"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson22_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson23"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson23_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson24"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson24_title"
						android:layout_marginTop="5dp"/>

					<Button
						android:background="@drawable/bt_shape"
						android:stateListAnimator="@drawable/state_list_animator_z"
						android:id="@+id/btnLesson25"
						android:layout_width="250.0dip"
						android:layout_height="wrap_content"
						android:text="@string/lesson25_title"
						android:layout_marginTop="5dp"
						android:layout_marginBottom="5dp"/>

				</LinearLayout>

			</ScrollView>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent">

			<com.google.android.gms.ads.AdView
				xmlns:ads="http://schemas.android.com/apk/res-auto"
				android:id="@+id/adView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				ads:adSize="SMART_BANNER"
				ads:adUnitId="@string/banner_ad_unit_id"/>

		</LinearLayout>

	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>

