<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<include
			layout="@layout/main_toolbar"/>

	</android.support.design.widget.AppBarLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:gravity="center">

		<ScrollView
			android:layout_gravity="top"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:padding="10.0dip"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/lesson8_p"/>

				<HorizontalScrollView
					android:background="#ffdddddd"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:typeface="monospace"
						android:padding="10.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/lesson10_code"/>

				</HorizontalScrollView>

				<TextView
					android:background="#fffcfc00"
					android:padding="10.0dip"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/lesson10_hint"/>

				<TextView
					android:padding="10.0dip"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/lesson10_p2"/>

				<HorizontalScrollView
					android:background="#ffdddddd"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:typeface="monospace"
						android:padding="10.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/lesson10_code2"/>

				</HorizontalScrollView>

				<TextView
					android:padding="10.0dip"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/lesson10_p3"/>

				<HorizontalScrollView
					android:background="#ffdddddd"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:typeface="monospace"
						android:padding="10.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/lesson10_code3"/>

				</HorizontalScrollView>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
